# dwf-mcp

./: .gitignore  HANDOFF.md  README.md  conftest.py  diag_uart.py  pyproject.toml
.claude/: settings.local.json
captures/: 2026-06-06T00-39-22_scope_4529fc2c.json  2026-06-06T00-39-22_scope_4529fc2c.npz  2026-06-06T00-39-22_scope_c2885830.json  2026-06-06T00-39-22_scope_c2885830.npz  2026-06-06T00-39-22_scope_eb31998c.json  2026-06-06T00-39-22_scope_eb31998c.npz  2026-06-06T00-39-23_scope_af5eaae2.json  2026-06-06T00-39-23_scope_af5eaae2.npz
docs/: architecture.md  troubleshooting.md
docs/plans/: 2026-06-02-dwf-mcp-design.md  2026-06-02-foundation-implementation.md  2026-06-02-stage2-design.md  2026-06-02-stage2-handoff.md  2026-06-02-stage2-implementation.md  2026-06-02-stage3-handoff.md  2026-06-05-stage3b-handoff.md
docs/superpowers/: 2026-06-05-jumperless-implementation-handoff.md
src/dwf_mcp/: __init__.py  allocator.py  artifacts.py  backend.py  bode_dsp.py  device.py  formulae.py  impedance_dsp.py  instrument.py  jumperless.py  jumperless_smoke_test.py  logic_trigger.py  pattern_util.py  pin_utils.py  policy.py  registry.py  server.py  spectrum_dsp.py  streaming.py  sweep_dsp.py  tool_descriptions.py  vcd_writer.py
tests/: conftest.py
tests/hardware/: conftest.py  diag_ai_range.py  diag_can.py  diag_can2.py  diag_scope_ch2.py  pinout.py  test_adp2230_awg_scope_hardware.py  test_adp2230_hardware.py  test_awg_custom_hardware.py  test_awg_hardware.py  test_bode_hardware.py  test_can_hardware.py  test_cookbook_formulae_hardware.py  test_decoder_i2c_post_process.py  test_dio_dd_hardware.py  test_dio_hardware.py  test_dio_loopback_hardware.py  test_dio_pull_hardware.py  test_dmm_hardware.py  test_i2c_hardware.py  test_impedance_hardware.py  test_logic_dd_hardware.py  test_logic_hardware.py  test_logic_loopback_hardware.py  test_logic_record_dd_hardware.py  test_logic_record_hardware.py  test_logic_trigger_hardware.py  test_pattern_low_freq_hardware.py  test_pydwf_backend.py  test_scope_hardware.py  test_scope_record_hardware.py  test_scope_trigger_hardware.py  test_sniff_can_hardware.py  test_sniff_i2c_hardware.py  test_sniff_i2c_observe_hardware.py  test_sniff_spi_hardware.py  test_sniff_uart_hardware.py  test_sniff_uart_observe_hardware.py  test_spi_hardware.py  (+3 more)
(+111 files in other folders)
